--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1617,9 +1617,11 @@ ul.major-icons li .icon {
 
 .left {
   margin-left: 0;
+  margin-right: 1em;
   text-align: left;
 }
 .right {
+  margin-left: 1em;
   margin-right: 0;
   text-align: right;
 }
@@ -1631,6 +1633,14 @@ ul.major-icons li .icon {
 .fit {
   display: block;
   width: 100%
+}
+
+.float-left {
+  margin-right: 1em;
+}
+
+.float-right {
+  margin-left: 1em;
 }
 
 @media screen and (min-width: 880px) {
